--- a/docs/faq/using-cloudflare-with-ghost.mdx
+++ b/docs/faq/using-cloudflare-with-ghost.mdx
@@ -19,4 +19,4 @@ It is recommended that you add a page rule which turns off some RocketLoader, mi
   <img src="/images/c4549abf-cloudflare-ghost_hu3292e1ab34393a3f83860fc03720b502_39786_791x0_resize_q100_h2_box_3.webp" />
 </Frame>
 
-This solution is for developers who are maintaining a self-hosted instance of Ghost. If you’re on Ghost(Pro) both nginx and CloudFlare are configured as standard and you don’t need to do anything.
+This solution is for developers who are maintaining a self-hosted instance of Ghost. If you’re on Ghost(Pro) both nginx and Cloudflare are configured as standard and you don’t need to do anything.
