Documentation edits made through Mintlify web editor

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Introduction"
-description: Ghost is an open source, professional publishing platform built on a modern Node.js technology stack — designed for teams who need power, flexibility and performance.
+description: "Ghost is an open source, professional publishing platform built on a modern Node.js technology stack — designed for teams who need power, flexibility and performance."
 ---
 
-***
+---
 
 Hitting the right balance of needs has led Ghost to be used in production by organisations including Apple, Sky News, DuckDuckGo, Mozilla, Kickstarter, Square, Cloudflare, Tinder, the Bitcoin Foundation and [many more](https://ghost.org/explore/).
 
@@ -13,23 +13,23 @@ Every day Ghost powers some of the most-read stories on the internet, serving hu
 
 The first question most people have is, of course, how is Ghost different from everything else out there? Here’s a table to give you a quick summary:
 
-|                                                              | Ghost (That's us!) | Open platforms (eg. WordPress) | Closed platforms (eg. Substack) |
-| ------------------------------------------------------------ | ------------------ | ------------------------------ | ------------------------------- |
-| 🏎 Exceptionally fast                                        | ✅                  | ❌                              | ✅                               |
-| 🔒 Reliably secure                                           | ✅                  | ❌                              | ✅                               |
-| 🎨 Great design                                              | ✅                  | ❌                              | ✅                               |
-| 👩🏼🚀 Modern technology                                    | ✅                  | ❌                              | ✅                               |
-| ♻️ Open Source                                               | ✅                  | ✅                              | ❌                               |
-| 🏰 Own your brand+data                                       | ✅                  | ✅                              | ❌                               |
-| 🌍 Use a custom domain                                       | ✅                  | ✅                              | ❌                               |
-| 🖼 Control your site design                                  | ✅                  | ✅                              | ❌                               |
-| 🌱 Censorship-free                                           | ✅                  | ✅                              | ❌                               |
-| ⭐️ Built-in SEO control                                      | ✅                  | ❌                              | ❌                               |
-| 🚀 Native REST API                                           | ✅                  | ❌                              | ❌                               |
-| 🛠 Comprehensive SDK                                         | ✅                  | ❌                              | ❌                               |
-| 🛒 Built-in membership & subscription commerce features      | ✅                  | ❌                              | ❌                               |
-| 🤝 Works with any front-end or static site framework         | ✅                  | ❌                              | ❌                               |
-| ❤️ Non-profit organisation with a sustainable business model | ✅                  | ❌                              | ❌                               |
+|                                                              | Ghost (That's us\!) | Open platforms (eg. WordPress) | Closed platforms (eg. Substack) |
+| ------------------------------------------------------------ | ------------------- | ------------------------------ | ------------------------------- |
+| 🏎 Exceptionally fast                                        | ✅                   | ❌                              | ✅                               |
+| 🔒 Reliably secure                                           | ✅                   | ❌                              | ✅                               |
+| 🎨 Great design                                              | ✅                   | ❌                              | ✅                               |
+| 👩🏼🚀 Modern technology                                     | ✅                   | ❌                              | ✅                               |
+| ♻️ Open Source                                               | ✅                   | ✅                              | ❌                               |
+| 🏰 Own your brand\+data                                      | ✅                   | ✅                              | ❌                               |
+| 🌍 Use a custom domain                                       | ✅                   | ✅                              | ❌                               |
+| 🖼 Control your site design                                  | ✅                   | ✅                              | ❌                               |
+| 🌱 Censorship-free                                           | ✅                   | ✅                              | ❌                               |
+| ⭐️ Built-in SEO control                                      | ✅                   | ❌                              | ❌                               |
+| 🚀 Native REST API                                           | ✅                   | ❌                              | ❌                               |
+| 🛠 Comprehensive SDK                                         | ✅                   | ❌                              | ❌                               |
+| 🛒 Built-in membership & subscription commerce features      | ✅                   | ❌                              | ❌                               |
+| 🤝 Works with any front-end or static site framework         | ✅                   | ❌                              | ❌                               |
+| ❤️ Non-profit organisation with a sustainable business model | ✅                   | ❌                              | ❌                               |
 
 **In short:** Other open platforms are generally old, slow and bloated, while other closed platforms give you absolutely no control or ownership of your content. Ghost provides the best of both worlds, and more.
 
@@ -49,7 +49,7 @@ So, we do things a little differently to most others:
 
 #### Independent structure
 
-Ghost is structured as a [non-profit organisation](https://ghost.org/about/) to ensure it can legally never be sold and will always remain independent, building products based on the needs of its users - *not* the whims of investors looking for 💰 returns.
+Ghost is structured as a [non-profit organisation](https://ghost.org/about/) to ensure it can legally never be sold and will always remain independent, building products based on the needs of its users - _not_ the whims of investors looking for 💰 returns.
 
 #### Sustainable business
 
@@ -81,7 +81,7 @@ Check out our [membership guide](/docs/members/) for more details.
 
 ### Developer-friendly API
 
-At its core Ghost is a self-consuming, RESTful JSON API with decoupled admin client and front-end. We provide lots of tooling to get a site running as quickly as possible, but at the end of the day it’s **Just JSON** ™️, so if you want to use Ghost completely headless and write your own frontend or backend… you can!
+At its core Ghost is a self-consuming, RESTful JSON API with decoupled admin client and front-end. We provide lots of tooling to get a site running as quickly as possible, but at the end of the day it’s **Just JSON** ™️, so if you want to use Ghost completely headless and write your own frontend or backend… you can\!
 
 Equally, Ghost is heavily designed for performance. There are 2-5 frontpage stories on HackerNews at any given time that are served by Ghost. It handles scale with ease and doesn’t fall over as a result of traffic spikes.
 
@@ -101,11 +101,11 @@ Whether you need a full **multi-language site** with `/en/` and `/de/` base URLs
 
 Set up your site with sensible user roles and permissions built-in from the start.
 
-* **Contributors:** Can log in and write posts, but cannot publish.
-* **Authors:** Can create and publish new posts and tags.
-* **Editors:** Can invite, manage and edit authors and contributors.
-* **Administrators:** Have full permissions to edit all data and settings.
-* **Owner:** An admin who cannot be deleted + has access to billing details.
+- **Contributors:** Can log in and write posts, but cannot publish.
+- **Authors:** Can create and publish new posts and tags.
+- **Editors:** Can invite, manage and edit authors and contributors.
+- **Administrators:** Have full permissions to edit all data and settings.
+- **Owner:** An admin who cannot be deleted \+ has access to billing details.
 
 ### Custom themes
 
@@ -133,7 +133,7 @@ Ghost has all the fundamental technical SEO optimisations built directly into co
 
 Ghost will automatically generate and link to a complete Google sitemap including every page on your site, to make sure search engines are able to index every URL.
 
-**Automatic structured data + JSON-LD**
+**Automatic structured data \+ JSON-LD**
 
 Ghost generates [JSON-LD](https://developers.google.com/search/docs/guides/intro-structured-data) based structured metadata about your pages so that you don’t have to rely on messy microformats in your markup to provide semantic context. Even if you change theme or front-end, your SEO remains perfectly intact. Ghost also adds automatic code for Facebook OpenGraph and Twitter Cards.
 
@@ -141,6 +141,6 @@ Ghost generates [JSON-LD](https://developers.google.com/search/docs/guides/intro
 
 Ghost automatically generates the correct `rel="canonical"` tag for each post and page so that search engines always prioritise one true link.
 
-***
+---
 
 If you’re curious to see more, check out the [features page](https://ghost.org/features/) on Ghost.org.
