Documentation edits made through Mintlify web editor

--- a/product.mdx
+++ b/product.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Product Principles & Roadmap"
 sidebarTitle: "Overview"
-description: Developing Ghost as a product is a complex process undertaken by a small number of people with a great deal of care.
+description: "Developing Ghost as a product is a complex process undertaken by a small number of people with a great deal of care."
 ---
 
-***
+---
 
 ## How we make product decisions
 
@@ -24,18 +24,19 @@ The ideas board is a great way for us to gauge user demand, but it’s not a dem
 
 Based on how we make product decisions, and what feature requests we get (detailed above) — if neither the core team nor the wider community are building the thing you want, then it’s likely that there isn’t enough demand or interest to make it happen at the moment.
 
-But, the beauty of open source is that if enough people want something, they can easily get together on GitHub and make it happen themselves (or fund someone else to). There’s no need to wait on the core team to deliver it. If you really want or need a particular feature, it’s entirely possible to make that happen. You just need to get involved, either with time and development skills, or with money to fund someone with time and development skills.
+But, the great thing about open source is that if enough people want something, they can easily get together on GitHub and make it happen themselves (or fund someone else to). There’s no need to wait on the core team to deliver it. If you really want or need a particular feature, it’s entirely possible to make that happen. 
 
-## I’m very upset you aren’t doing what I want!
+You can get involved, either by contributing your time and development skills, or by providing financial support to fund someone with these skills.
 
-For the most part, the Ghost community is kind, welcoming and very understanding about the complexities and constraints of building modern software. Every so often, though, we get a series of comments along the lines of:
+## I’m very upset you aren’t doing what I want\!
 
-<Note>
-Ya so, wow, I can’t believe this is broken and nobody is doing anything. How have you messed up something so basic? Can the devs fix ASAP. Thanks.
+For the most part, the Ghost community is kind and understanding of the complexities and constraints of building modern software. Every so often, though, we get a series of comments along the lines of:
 
-</Note>
+> Wow, I can’t believe this is broken and nobody is doing anything. How have you messed up something so basic? Can the devs fix ASAP. Thanks.
 
-Being hostile and entitled in your interactions with our community doesn’t make anybody feel excited about helping you. Not the core team, and certainly not the wider group of volunteer contributors. Try being friendly to people, and they’ll typically be friendly in return. If you feel really passionate about something specific, you have 3 potential courses of action:
+Comments like this don't inspire anyone to help you. Not the core team, and certainly not the wider group of volunteer contributors. If you're friendly and polite, other will typically be friendly in return. 
+
+If you feel really passionate about something specific, you have 3 potential courses of action:
 
 1. Get involved on GitHub and contribute code to fix the issue
 2. Hire a developer to get involved on GitHub and contribute code to fix the issue
@@ -43,4 +44,4 @@ Being hostile and entitled in your interactions with our community doesn’t mak
 
 ## Is there a public roadmap for what’s coming next?
 
-The Ghost core team maintains a broad 1-2 year product roadmap at any given time which defines the overall direction of the company and the software. While the exact roadmap isn’t shared publicly (we tried it and it turned out to be more distracting than helpful), the things being worked on are generally very visible [on GitHub](https://github.com/tryghost/ghost).
+The Ghost core team maintains a broad 1-2 year product roadmap at any given time, which defines the overall direction of the company and the software. While the exact roadmap isn’t shared publicly (we tried it and it turned out to be more distracting than helpful), the things being worked on are generally very visible [on GitHub](https://github.com/tryghost/ghost).
