--- a/jamstack/gatsby.mdx
+++ b/jamstack/gatsby.mdx
@@ -15,7 +15,7 @@ One of the best ways to start a new Gatsby site is with a Gatsby Starter, and in
 
 #### Prerequisites
 
-To use Gatsby Starters, and indeed Gatsby itself, the [Gatsby CLI](https://www.gatsbyjs.org/quick-start/) tool is required. Additionally, a [Ghost account](/pricing/) is needed to source content and get site related credentials.
+To use Gatsby Starters, and indeed Gatsby itself, the [Gatsby CLI](https://www.gatsbyjs.com/docs/quick-start/) tool is required. Additionally, a [Ghost account](/pricing/) is needed to source content and get site related credentials.
 
 #### Getting started
 
@@ -25,7 +25,7 @@ To begin, generate a new project using the [Gatsby Starter Ghost](https://github
 gatsby new my-gatsby-site https://github.com/TryGhost/gatsby-starter-ghost.git
 ```
 
-Navigate into the newly created project and use either npm install or yarn to install the dependencies. The Ghost team prefer to use [Yarn](https://yarnpkg.com/en/install#mac-stable).
+Navigate into the newly created project and use either npm install or yarn to install the dependencies. The Ghost team prefer to use [Yarn](https://yarnpkg.com/en/docs/install#mac-stable).
 
 Before customising and developing in this new Gatsby site, it’s wise to give it a test run to ensure everything is installed correctly. Use the following command to run the project:
 
@@ -67,7 +67,7 @@ Using [Netlify](https://www.netlify.com/) to host your site? If so, the `netlify
 
 ## Next steps
 
-[The official Gatsby docs](https://www.gatsbyjs.org/gatsby-project-structure/) is a great place to learn more about how typical Gatsby projects are structured and how it can be extended.
+[The official Gatsby docs](https://www.gatsbyjs.com/docs/gatsby-project-structure/) is a great place to learn more about how typical Gatsby projects are structured and how it can be extended.
 
 Gaining a greater understanding of how data and content can be sourced from the Ghost API with GraphQL will help with extending aforementioned starter project for more specific use cases.
 
@@ -75,7 +75,7 @@ There’s also a guide for setting up a new static site, such as Gatsby, [with t
 
 For community led support about linking and building a Ghost site with Gatsby, [visit the forum](https://forum.ghost.org/c/themes/).
 
-As with all content sources for Gatsby, content is fed in by [GraphQL](https://www.gatsbyjs.org/tutorial/part-four/), and it’s no different with Ghost. The official [Gatsby Source Ghost](https://github.com/TryGhost/gatsby-source-ghost) plugin allows you to pull content from your existing Ghost site.
+As with all content sources for Gatsby, content is fed in by [GraphQL](https://www.gatsbyjs.com/tutorial/part-four/), and it’s no different with Ghost. The official [Gatsby Source Ghost](https://github.com/TryGhost/gatsby-source-ghost) plugin allows you to pull content from your existing Ghost site.
 
 ## Getting started
 
@@ -173,13 +173,13 @@ The plugin doesn’t just work with Ghost - it’s compatible with an assortment
 
 With the ever expanding list of plugins available for Gatsby, it’s hard to understand which plugins are needed to make a high quality and well functioning site running on the Ghost API.
 
-[Gatsby Source Filesystem](https://www.gatsbyjs.org/packages/gatsby-source-filesystem/) is a plugin for creating additional directories inside a Gatsby site. This is ideal for storing static files (e.g. error pages), site-wide images, such as logos, and site configuration files like robots.txt.
+[Gatsby Source Filesystem](https://www.gatsbyjs.com/plugins/gatsby-source-filesystem/) is a plugin for creating additional directories inside a Gatsby site. This is ideal for storing static files (e.g. error pages), site-wide images, such as logos, and site configuration files like robots.txt.
 
-[Gatsby React Helmet plugin](https://www.gatsbyjs.org/packages/gatsby-plugin-react-helmet/) is very useful for constructing metadata in the head of any rendered page. The plugin requires minimum configuration, but can be modified to suit the need.
+[Gatsby React Helmet plugin](https://www.gatsbyjs.com/plugins/gatsby-plugin-react-helmet/) is very useful for constructing metadata in the head of any rendered page. The plugin requires minimum configuration, but can be modified to suit the need.
 
 ## Further reading
 
-There is plenty of reference material and resources on the [official Gatsby site](https://www.gatsbyjs.org/tutorial/), along with a long list of [available plugins](https://www.gatsbyjs.org/plugins/). It may also be worth understanding the underlying concepts of [static sites](https://jamstack.org/) and how they work differently to other sites.
+There is plenty of reference material and resources on the [official Gatsby site](https://www.gatsbyjs.com/tutorial/), along with a long list of [available plugins](https://www.gatsbyjs.com/plugins/). It may also be worth understanding the underlying concepts of [static sites](https://jamstack.org/) and how they work differently to other sites.
 
 To get an even more boarder view of performant site development check out web.dev from Google, which explores many topics on creating site for the modern web.
 
@@ -187,7 +187,7 @@ To get an even more boarder view of performant site development check out web.de
 
 Here are a few common examples of using GraphQL to query the Ghost API.
 
-Gatsby uses [GraphQL](https://www.gatsbyjs.org/graphql/) to retrieve content, retrieving content from the Ghost API is no different thanks to the Gatsby Source Ghost plugin. Below are some recipes to retrieve chunks of data from the API that you can use and manipulate for your own needs. More extensive learning can be found in the official [GraphQL documentation](https://graphql.org/graphql-js/passing-arguments/).
+Gatsby uses [GraphQL](https://www.gatsbyjs.com/docs/graphql/) to retrieve content, retrieving content from the Ghost API is no different thanks to the Gatsby Source Ghost plugin. Below are some recipes to retrieve chunks of data from the API that you can use and manipulate for your own needs. More extensive learning can be found in the official [GraphQL documentation](https://graphql.org/graphql-js/passing-arguments/).
 
 ## Retrieving posts
 
