--- a/jamstack/gridsome.mdx
+++ b/jamstack/gridsome.mdx
@@ -114,7 +114,7 @@ This code renames the GraphQL identifiers in the Gridsome starter of `descriptio
 
 ### Single post page
 
-Templates in Gridsome follow a [specific naming convention](https://gridsome.org/templates) which uses the type names as defined in the GraphQL schema, so the existing `Post.vue` file in `/src/templates/` needs to be renamed to `GhostPost.vue`.
+Templates in Gridsome follow a [specific naming convention](https://gridsome.org/docs/templates) which uses the type names as defined in the GraphQL schema, so the existing `Post.vue` file in `/src/templates/` needs to be renamed to `GhostPost.vue`.
 
 Once this is done, replace the `<page-query>` section in the template with the following:
 
