--- a/jamstack/hexo.mdx
+++ b/jamstack/hexo.mdx
@@ -27,11 +27,11 @@ hexo init my-hexo-site
 
 Running the Hexo site locally can be done by running `hexo server` and navigating to `http://localhost:4000/` in a web browser.
 
-More information on setting up and creating a Hexo site can be found on [the official Hexo site](https://hexo.io/setup).
+More information on setting up and creating a Hexo site can be found on [the official Hexo site](https://hexo.io/docs/setup).
 
 ## Getting started
 
-Firstly, create a new JavaScript file within a `scripts` folder at the root of the project directory, for example `./scripts/ghost.js` . Any script placed in the scripts folder acts like a Hexo script plugin, you can find out more about the [Plugins API in the Hexo documentation](https://hexo.io/plugins).
+Firstly, create a new JavaScript file within a `scripts` folder at the root of the project directory, for example `./scripts/ghost.js` . Any script placed in the scripts folder acts like a Hexo script plugin, you can find out more about the [Plugins API in the Hexo documentation](https://hexo.io/docs/plugins).
 
 Next, install the official [JavaScript Ghost Content API](/content-api/javascript/#installation) helper using:
 
@@ -258,6 +258,6 @@ The `author.slug` includes `/authors/` in the string so it correlates with [the 
 
 ## Further reading
 
-We highly recommend reading into the [official Hexo documentation](https://hexo.io/) for more info on how pages are generated. There’s also a handy [Troubleshooting page](https://hexo.io/troubleshooting.html) for any common issues encountered.
+We highly recommend reading into the [official Hexo documentation](https://hexo.io/docs) for more info on how pages are generated. There’s also a handy [Troubleshooting page](https://hexo.io/docs/troubleshooting.html) for any common issues encountered.
 
 Additionally there’s [plenty of themes for Hexo](https://hexo.io/themes/) that might be a good place to start when creating a custom Hexo site.
