--- a/jamstack/vuepress.mdx
+++ b/jamstack/vuepress.mdx
@@ -381,4 +381,4 @@ Restart your server and head to http\://localhost:8080/ to see the posts being r
 
 ### Further reading
 
-Learn more about the Ghost API and specific endpoints in our [API documentation](/content-api/) or check out the VuePress docs to find out [how to customize the default theme](https://vuepress.vuejs.org/theme/default-theme-config.html).
+Learn more about the Ghost API and specific endpoints in our [API documentation](/content-api/) or check out the VuePress docs to find out [how to customize the default theme](https://vuepress.vuejs.org/guide/theme.html).
