--- a/themes/helpers/data/date.mdx
+++ b/themes/helpers/data/date.mdx
@@ -14,7 +14,7 @@ description: 'Usage: `{{date value format="formatString"}}`'
 {{date published_at format="MMMM DD, YYYY"}}
 ```
 
-See the [Moment.js Display tokens](https://momentjs.com/#/displaying/format/) for more options.
+See the [Moment.js Display tokens](https://momentjs.com/docs/#/displaying/format/) for more options.
 
 Timezone and locale may be overridden from your site’s defaults by passing the `timezone` and `locale` parameters:
 
