--- a/install/source.mdx
+++ b/install/source.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "This guide is for installing a local development copy of Ghost fr
 Before getting started, you’ll need these global packages to be installed:
 
 * **A [supported version](/faq/node-versions/) of [Node.js](https://nodejs.org)** - Ideally installed via [nvm](https://github.com/creationix/nvm#install-script)
-* **[Yarn](https://yarnpkg.com/en/install#alternatives-tab)** - to manage all the packages
+* **[Yarn](https://yarnpkg.com/en/docs/install#alternatives-tab)** - to manage all the packages
 * **Docker (ie. [Docker Desktop](https://www.docker.com/products/docker-desktop/))** - to run the MySQL database and other services
 
 ***
