--- a/themes/members.mdx
+++ b/themes/members.mdx
@@ -373,7 +373,7 @@ Members may have multiple subscriptions, provided as an array. Subscription data
 
 ### Subscription attributes
 
-Subscription data comes from Stripe meaning a valid Stripe account connected to Ghost is required. Using subscription data in a local environment requires the [Stripe CLI tool](https://stripe.com/stripe-cli).
+Subscription data comes from Stripe meaning a valid Stripe account connected to Ghost is required. Using subscription data in a local environment requires the [Stripe CLI tool](https://stripe.com/docs/stripe-cli).
 
 * `id` –The Stripe ID of the subscription
 * `avatar_image` — The customers avatar image, pulled in from [Gravatar](https://en.gravatar.com/). If there is not one set for their email a transparent `png` will be returned as a default
