Fixed internal links

--- a/content-api/filtering.mdx
+++ b/content-api/filtering.mdx
@@ -4,7 +4,7 @@ title: Filtering
 
 Ghost uses a query language called NQL to allow filtering API results. You can filter any field or included field using matches, greater/less than or negation, as well as combining with and/or. NQL doesn’t yet support ’like’ or partial matches.
 
-Filter strings must be URL encoded. The [\{\{get}}](/themes/helpers/get/) helper and [client library](/content-api/javascript/) handle this for you.
+Filter strings must be URL encoded. The [\{\{get}}](/themes/helpers/functional/get/) helper and [client library](/content-api/javascript/) handle this for you.
 
 At it’s most simple, filtering works the same as in GMail, GitHub or Slack - you provide a field and a value, separated by a colon.
 
