--- a/install.mdx
+++ b/install.mdx
@@ -24,7 +24,7 @@ description: The fastest way to get started is to set up a site on **Ghost(Pro)*
 ## Cloud hosting
 
 <CardGroup cols={3}>
-  <Card title="Ghost(Pro)" img="/images/8e9b8c2f-pro-logo.svg" href="/pricing/" >
+  <Card title="Ghost(Pro)" img="/images/8e9b8c2f-pro-logo.svg" href="https://ghost.org/pricing/" >
     Official managed hosting
   </Card>
   <Card title="Digital Ocean" img="/images/b5a6f6ec-digitalocean-logo.svg" href="/install/digitalocean/" >
