--- a/install/local.mdx
+++ b/install/local.mdx
@@ -102,4 +102,4 @@ You’ve completed a local Ghost install — congrats! You can now put Ghost thr
 
 When you’re ready ship your site to production, [follow one of these guides](/install/).
 
-For more information about theme development read the [Handlebars theme documentation](/themes/) and check out the [tutorials](/tutorials/).
+For more information about theme development read the [Handlebars theme documentation](/themes/) and check out the [tutorials](https://ghost.org/tutorials/).
