--- a/install/ubuntu.mdx
+++ b/install/ubuntu.mdx
@@ -236,4 +236,4 @@ For troubleshooting and errors, use the site search and [FAQ section](/faq/) to 
 
 ## What’s next?
 
-You’re all set\! Now you can start customising your site. Check out our range of [tutorials](/tutorials/) or the Ghost [API documentation](/content-api/) depending on which page of this choose-your-own-adventure experience you’d like to subject yourself to next.
+You’re all set\! Now you can start customising your site. Check out our range of [tutorials](https://ghost.org/tutorials/) or the Ghost [API documentation](/content-api/) depending on which page of this choose-your-own-adventure experience you’d like to subject yourself to next.
