--- a/jamstack/custom.mdx
+++ b/jamstack/custom.mdx
@@ -7,7 +7,7 @@ description: Build a completely custom front-end for your Ghost site with our Co
 
 ## Prerequisites
 
-You’ll need basic understanding of JavaScript and a running Ghost installation, which can either be self-hosted or using [Ghost(Pro)](/pricing/).
+You’ll need basic understanding of JavaScript and a running Ghost installation, which can either be self-hosted or using [Ghost(Pro)](https://ghost.org/pricing/).
 
 ## Getting started
 
