--- a/jamstack/eleventy.mdx
+++ b/jamstack/eleventy.mdx
@@ -15,7 +15,7 @@ Eleventy is a “zero configuration” static site generator, meaning it works w
 
 ### Prerequisites
 
-A Ghost account is needed in order to source the content, a self hosted version or a [Ghost (Pro) Account](/pricing/).
+A Ghost account is needed in order to source the content, a self hosted version or a [Ghost (Pro) Account](https://ghost.org/pricing/).
 
 ### Getting started
 
@@ -61,17 +61,17 @@ Change the `GHOST_CONTENT_API_KEY` value to a key associated with the Ghost site
 
 More information can be found on the [Content API documentation](/content-api/#key).
 
-**Using[Netlify](https://www.netlify.com/)to host your site? If so, the `netlify.toml` file that comes with the starter template provides the deployment configuration straight out of the box.**
+**Using [Netlify](https://www.netlify.com/) to host your site? If so, the `netlify.toml` file that comes with the starter template provides the deployment configuration straight out of the box.**
 
 ***
 
 ## Next steps
 
-[The official Eleventy docs](https://www.11ty.io/docs)is a great place to learn more about how Eleventy works and how it can be used to build static sites.
+[The official Eleventy docs](https://www.11ty.io/docs) is a great place to learn more about how Eleventy works and how it can be used to build static sites.
 
-There’s also a guide for setting up a new static site, such as Eleventy,[with the hosting platform Netlify](/integrations/netlify/) so Netlify can listen for updates on a Ghost site and rebuild the static site.
+There’s also a guide for setting up a new static site, such as Eleventy, [with the hosting platform Netlify](https://ghost.org/integrations/netlify/) so Netlify can listen for updates on a Ghost site and rebuild the static site.
 
-For community led support about linking and building a Ghost site with Eleventy,[visit the forum](https://forum.ghost.org/c/themes/).
+For community led support about linking and building a Ghost site with Eleventy, [visit the forum](https://forum.ghost.org/c/themes/).
 
 ## Examples
 
