--- a/jamstack/gatsby.mdx
+++ b/jamstack/gatsby.mdx
@@ -15,7 +15,7 @@ One of the best ways to start a new Gatsby site is with a Gatsby Starter, and in
 
 #### Prerequisites
 
-To use Gatsby Starters, and indeed Gatsby itself, the [Gatsby CLI](https://www.gatsbyjs.com/docs/quick-start/) tool is required. Additionally, a [Ghost account](/pricing/) is needed to source content and get site related credentials.
+To use Gatsby Starters, and indeed Gatsby itself, the [Gatsby CLI](https://www.gatsbyjs.com/docs/quick-start/) tool is required. Additionally, a [Ghost account](https://ghost.org/pricing/) is needed to source content and get site related credentials.
 
 #### Getting started
 
@@ -71,7 +71,7 @@ Using [Netlify](https://www.netlify.com/) to host your site? If so, the `netlify
 
 Gaining a greater understanding of how data and content can be sourced from the Ghost API with GraphQL will help with extending aforementioned starter project for more specific use cases.
 
-There’s also a guide for setting up a new static site, such as Gatsby, [with the hosting platform Netlify](/integrations/netlify/).
+There’s also a guide for setting up a new static site, such as Gatsby, [with the hosting platform Netlify](https://ghost.org/integrations/netlify/).
 
 For community led support about linking and building a Ghost site with Gatsby, [visit the forum](https://forum.ghost.org/c/themes/).
 
@@ -149,7 +149,7 @@ There are many additional aspects to switching from a typical Ghost front-end to
 
 Switching to a new front-end means handling the old front-end in a different way.
 
-One option is to make the old pages canonical, meaning that these pages will remain online, but will reference the new counterparts on the API driven site. Check out the documentation on [using canonical URLs in Ghost](/help/publishing-options/#add-custom-canonical-urls).
+One option is to make the old pages canonical, meaning that these pages will remain online, but will reference the new counterparts on the API driven site. Check out the documentation on [using canonical URLs in Ghost](https://ghost.org/help/publishing-options/#add-custom-canonical-urls).
 
 <Frame>
   <img src="/images/bef9adef-admin-private-option_hub2336ad8c44cf39926a93b72f74de9cd_10436_800x0_resize_q100_h2_box_3.webp" />
