--- a/jamstack/gridsome.mdx
+++ b/jamstack/gridsome.mdx
@@ -11,7 +11,7 @@ description: Learn how to spin up a site using Ghost as a headless CMS and build
 
 ## Prerequisites
 
-This configuration of a Ghost publication requires existing moderate knowledge of JavaScript as well as Vue.js. You’ll need an active Ghost account to get started, which can either be self-hosted or using a [Ghost(Pro) account](/pricing/).
+This configuration of a Ghost publication requires existing moderate knowledge of JavaScript as well as Vue.js. You’ll need an active Ghost account to get started, which can either be self-hosted or using a [Ghost(Pro) account](https://ghost.org/pricing/).
 
 Finally, you’ll need to install Gridsome globally via the command line in your terminal using the following:
 
@@ -274,4 +274,4 @@ The [Gridsome Ghost Source Plugin](https://gridsome.org/plugins/@gridsome/source
 
 ## Further reading
 
-Learn more about the Ghost API and specific endpoints in our [API documentation](/content-api/). Otherwise check out our Integrations and how you can deploy your Gridsome site to platforms such as [Netlify](/integrations/netlify/).
+Learn more about the Ghost API and specific endpoints in our [API documentation](/content-api/). Otherwise check out our Integrations and how you can deploy your Gridsome site to platforms such as [Netlify](https://ghost.org/integrations/netlify/).
