--- a/jamstack/hexo.mdx
+++ b/jamstack/hexo.mdx
@@ -11,7 +11,7 @@ description: Learn how to spin up a site using Ghost as a headless CMS and build
 
 ## Prerequisites
 
-This configuration of a Ghost publication requires existing moderate knowledge of JavaScript. You’ll need an active Ghost account to get started, which can either be self-hosted or using a [Ghost(Pro) account](/pricing/).
+This configuration of a Ghost publication requires existing moderate knowledge of JavaScript. You’ll need an active Ghost account to get started, which can either be self-hosted or using a [Ghost(Pro) account](https://ghost.org/pricing/).
 
 Additionally, you’ll need to install Hexo via the command line:
 
