--- a/jamstack/next.mdx
+++ b/jamstack/next.mdx
@@ -24,7 +24,7 @@ Check it out → [https://t.co/iawYNTuB8y](https://t.co/iawYNTuB8y) [pic.twitter
 
 ## Prerequisites
 
-This configuration of a Ghost publication requires existing moderate knowledge of JavaScript and [React](https://reactjs.org/). You’ll need an active Ghost account to get started, which can either be self-hosted or using [Ghost(Pro)](/pricing/).
+This configuration of a Ghost publication requires existing moderate knowledge of JavaScript and [React](https://reactjs.org/). You’ll need an active Ghost account to get started, which can either be self-hosted or using [Ghost(Pro)](https://ghost.org/pricing/).
 
 Additionally, you’ll need to setup a React & Next.js application via the command line:
 
