--- a/jamstack/vuepress.mdx
+++ b/jamstack/vuepress.mdx
@@ -11,7 +11,7 @@ description: Learn how to spin up a site using Ghost as a headless CMS and build
 
 ## Prerequisites
 
-You’ll need basic understanding of JavaScript and a running Ghost installation, which can either be self-hosted or using [Ghost(Pro)](/pricing/). In this documentation we’re going to start with a new project from scratch. Skip these initial setup steps if you have an existing VuePress project.
+You’ll need basic understanding of JavaScript and a running Ghost installation, which can either be self-hosted or using [Ghost(Pro)](https://ghost.org/pricing/). In this documentation we’re going to start with a new project from scratch. Skip these initial setup steps if you have an existing VuePress project.
 
 Firstly, create a new project:
 
