--- a/reinstall.mdx
+++ b/reinstall.mdx
@@ -114,7 +114,7 @@ If you used `ghost backup` to generate a backup zip, these are the steps to rest
 
 To import paid members, Ghost needs to be connected to Stripe in Live mode *before* you import your members.
 
-Make sure to connect Ghost to **the same Stripe account** you were using on your old installation - learn more about how to connect a Stripe account [in this guide](/help/setup-members/#connect-a-stripe-account).
+Make sure to connect Ghost to **the same Stripe account** you were using on your old installation - learn more about how to connect a Stripe account [in this guide](https://ghost.org/help/setup-members/#connect-a-stripe-account).
 
 ## Import members
 
