--- a/themes/helpers/data/tiers.mdx
+++ b/themes/helpers/data/tiers.mdx
@@ -87,4 +87,4 @@ Change the term “tier” with a custom suffix.
 {{/get}}
 ```
 
-See our [\{\{#get}} helper docs](/themes/helpers/get/) to learn more about using this helper with tiers.
+See our [\{\{#get}} helper docs](/themes/helpers/functional/get/) to learn more about using this helper with tiers.
