--- a/themes/members.mdx
+++ b/themes/members.mdx
@@ -105,7 +105,7 @@ By using `hidden` inputs in the examples above, newsletter details are hidden fr
 </form>
 ```
 
-Create a dynamic signup form at the theme level by using the [`get` helper](/themes/helpers/get/) to fetch a site’s `newsletters`. Then, loop through the newsletters and add the `name` property to an `input` element. See below for an example implementation:
+Create a dynamic signup form at the theme level by using the [`get` helper](/themes/helpers/functional/get/) to fetch a site’s `newsletters`. Then, loop through the newsletters and add the `name` property to an `input` element. See below for an example implementation:
 
 ```handlebars
 <form data-members-form=>
@@ -418,7 +418,7 @@ The `{{price}}` helper formats monetary values from their smallest denomination 
 
 This will output `$5`.
 
-The `{{price}}` helper has many options with detailed documentation [here](/themes/helpers/price/).
+The `{{price}}` helper has many options with detailed documentation [here](/themes/helpers/data/price/).
 
 ### Cancel links
 
