--- a/themes/search.mdx
+++ b/themes/search.mdx
@@ -13,7 +13,7 @@ The easiest way to get started with search is by adding a `#/search` URL to the 
 
 ## Implementing Search in themes
 
-The quickest way is to use the `{{search}}` helper to output a button with a search icon. See [the helper docs](/themes/helpers/search) for more details.
+The quickest way is to use the `{{search}}` helper to output a button with a search icon. See [the helper docs](/themes/helpers/utility/search) for more details.
 
 Alternatively, add the `data-ghost-search` data attribute to any element in the theme. Here’s an example from the default theme [Casper](https://github.com/TryGhost/Casper/blob/81d036d4ca036f454f96173a650dd4acc6bb3ca0/default.hbs#L45):
 
