--- a/content-api/tags.mdx
+++ b/content-api/tags.mdx
@@ -9,7 +9,7 @@ GET /content/tags/{id}/
 GET /content/tags/slug/{slug}/
 ```
 
-By default, internal tags are always included, use `filter=visibility:public` to limit the response directly or use the [tags helper](/themes/helpers/tags/) to handle filtering and outputting the response.
+By default, internal tags are always included, use `filter=visibility:public` to limit the response directly or use the [tags helper](/themes/helpers/data/tags/) to handle filtering and outputting the response.
 
 Tags that are not associated with a post are not returned. You can supply `include=count.posts` to retrieve the number of posts associated with a tag.
 
