--- a/jamstack/nuxt.mdx
+++ b/jamstack/nuxt.mdx
@@ -11,7 +11,7 @@ description: Learn how to spin up a JavaScript app using Ghost as a headless CMS
 
 ## Prerequisites
 
-This configuration of a Ghost publication requires existing moderate knowledge of JavaScript as well as Vue.js. You’ll need an active Ghost account to get started, which can either be self-hosted or using [Ghost(Pro)](/pricing/).
+This configuration of a Ghost publication requires existing moderate knowledge of JavaScript as well as Vue.js. You’ll need an active Ghost account to get started, which can either be self-hosted or using [Ghost(Pro)](https://ghost.org/pricing/).
 
 Additionally, you’ll need to setup a Nuxt.js application via the command line:
 
