better logo download

--- a/logos.mdx
+++ b/logos.mdx
@@ -8,17 +8,23 @@ description: The Ghost brand is our pride and joy. We’ve gone to great lengths
 <Frame>
   <img src="/images/ed2eeb2c-ghost-logo-dark.png" />
 </Frame>
-[Download](/images/logos/ghost-logo-dark.png)
+<div className='mt-2 mb-8'>
+  <a href="/images/ed2eeb2c-ghost-logo-dark.png" download="ghost-logo-dark.png">Download</a>
+</div>
 
 <Frame>
   <img src="/images/74e0ffae-ghost-logo-orb.png" />
 </Frame>
-[Download](/images/logos/ghost-logo-orb.png)
+<div className='mt-2 mb-8'>
+  <a href="/images/74e0ffae-ghost-logo-orb.png" download="ghost-logo-orb.png">Download</a>
+</div>
 
 <Frame>
   <img src="/images/3715a5ca-ghost-logo-light.png" />
 </Frame>
-[Download](/images/logos/ghost-logo-light.png)
+<div className='mt-2 mb-8'>
+  <a href="/images/3715a5ca-ghost-logo-light.png" download="ghost-logo-light.png">Download</a>
+</div>
 
 ### Ghost colours
 
